# eloc_metrix

./: CHANGELOG.md  README.md  eloc_metrix.py  exclude_extensions.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: __init__.py  test_eloc_metrix.py
